--- a/SampleBIDataAPI/Index.html
+++ b/SampleBIDataAPI/Index.html
@@ -18,8 +18,8 @@
 
     <script src="http://ajax.aspnetcdn.com/ajax/jQuery/jquery-2.0.3.min.js"></script>
     <script>
-        //var uri = 'api/products';
-        var uri = 'http://localhost/SampleBIDataAPI/api/products'
+        var uri = 'api/products';
+        //var uri = 'http://localhost/SampleBIDataAPI/api/products'
 
         $(document).ready(function () {
             // Send an AJAX request
